--- a/Infrastructure/ETicaretAPI.Persistence/ETicaretAPI.Persistence.csproj
+++ b/Infrastructure/ETicaretAPI.Persistence/ETicaretAPI.Persistence.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Auth" Version="1.57.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.10">
       <PrivateAssets>all</PrivateAssets>
